--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body{
     margin: 0;
     display: flex;
-    background-image: url("https://media.istockphoto.com/id/620951116/photo/panoramic-view-of-colorful-sunrise-in-mountains.jpg?s=612x612&w=0&k=20&c=6IO5LBwLVSBPxQD4L5NlrxRkygeocjA5OKg8iKqvT58=");
+    background-image: url("images/sunrise.jpg");
     background-size: cover;
     justify-content: center;
     height: 100vh;
